# net

./: CMakeLists.txt  Digit.kdev4  convnet.cpp  convnet.h  cube.cpp  cube.h  interface.cpp  interface.h  interface.ui  main.cpp  mnist.cpp  mnist.h  neuralnet.cpp  neuralnet.h  worker.cpp  worker.h
